fixed wrong background image path in .song-stat CSS selector
git-svn-id: file:///srv/svn/myousica/myousica/trunk@391 1758279c-6b0d-4dd2-8212-40bfc25400ca

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2110,7 +2110,7 @@ div#messages div.notice, div#messages div.error, div#messages div.inbox {
 	padding:10px 10px 0px;
 }
 .song-stat{
-	background:#F6F6F6 url(..8/graphic_image/rounded_grey_boxbottom.gif) no-repeat bottom left;
+	background:#F6F6F6 url(/images/rounded_grey_boxbottom.gif) no-repeat bottom left;
 	padding:15px;
 }
 /* special arrow */
